src/objects/Model_N__c.object
<CustomObject>
    <fields>
        <fullName>Role_Sub_Category__c</fullName>
        <label>Roles</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Roles_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BL Approver</fullName>
                </value>
                <value>
                    <fullName>BL Approver / BL Pricing Spec</fullName>
                </value>
                <value>
                    <fullName>BL Approver / BL Pricing Spec / RDK</fullName>
                </value>
                <value>
                    <fullName>BL APPROVER / QUOTE EXCEPTION ROLE</fullName>
                </value>
                <value>
                    <fullName>BL approver / RDK</fullName>
                </value>
                <value>
                    <fullName>BL Pricing Spec</fullName>
                </value>
                <value>
                    <fullName>BL Pricing Spec / RDK</fullName>
                </value>
                <value>
                    <fullName>Central User Admin</fullName>
                </value>
                <value>
                    <fullName>Central User Admin / GSAS</fullName>
                </value>
                <value>
                    <fullName>CMD Officer</fullName>
                </value>
                <value>
                    <fullName>CMD Officer / Disti Quote Spec</fullName>
                </value>
                <value>
                    <fullName>CMD Officer / Disti Quote Spec / POS aliasing Spec/ RDK</fullName>
                </value>
                <value>
                    <fullName>CMD Officer / Disti Quote Spec / RDK</fullName>
                </value>
                <value>
                    <fullName>CMD Officer / POS Aliasing Spec</fullName>
                </value>
                <value>
                    <fullName>CMD Officer/POS Aliasing Spec/Pricing Adm./RDK/Product Master Data</fullName>
                </value>
                <value>
                    <fullName>CMD Officer / POS Aliasing Spec / RDK</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Customer Master data officer</fullName>
                </value>
                <value>
                    <fullName>Disti Controller</fullName>
                </value>
                <value>
                    <fullName>Disti controller / RDK</fullName>
                </value>
                <value>
                    <fullName>Disti Quote Spec</fullName>
                </value>
                <value>
                    <fullName>Disti Quote Specialist</fullName>
                </value>
                <value>
                    <fullName>EMS/OEM CP&amp;Q</fullName>
                </value>
                <value>
                    <fullName>EMS Comm Marketing</fullName>
                </value>
                <value>
                    <fullName>EMS Contract and Quote Specialist</fullName>
                </value>
                <value>
                    <fullName>Exception user</fullName>
                </value>
                <value>
                    <fullName>FAM Support</fullName>
                </value>
                <value>
                    <fullName>FAM Support / TAM Support</fullName>
                </value>
                <value>
                    <fullName>FAM Support (Model N)</fullName>
                </value>
                <value>
                    <fullName>First line support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roles_Category__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Lines</fullName>
                </value>
                <value>
                    <fullName>Disti Sales</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>F&amp;A</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Support 1st line</fullName>
                </value>
                <value>
                    <fullName>Support 2nd line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roles_Disti_new__c</fullName>
        <label>Roles</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disti - Design Registrations</fullName>
                </value>
                <value>
                    <fullName>Disti - Quoting</fullName>
                </value>
                <value>
                    <fullName>Disti - BB Design Regstrations</fullName>
                </value>
                <value>
                    <fullName>Disti - BB Quoting</fullName>
                </value>
                <value>
                    <fullName>D - Design Reg / D - Quoting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>User a/c created</fullName>
                </value>
                <value>
                    <fullName>Change made</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tel_Mobile__c</fullName>
        <label>Tel/Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Throughput_Time__c</fullName>
        <description>GSAS Throughput Time</description>
        <formula>CASE(Status__c, 
&quot;User A/c Created&quot;, (Date_Time_Pending__c - CreatedDate) + (Date_Time_Account_Created__c - Date_Time_Approved__c) , 
&quot;Change made&quot;, (Date_Time_Pending__c - CreatedDate) + (Date_Time_Account_Created__c - Date_Time_Approved__c) , 
&quot;Submitted&quot;, NULL , 
Date_Time_Pending__c - CreatedDate 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GSAS Throughput Time</inlineHelpText>
        <label>GSAS Throughput Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <description>Total Time</description>
        <formula>CASE(Status__c, 
&quot;User A/c Created&quot; , (Approver_Throughput_Time__c + Throughput_Time__c) , 
&quot;Change made&quot; , (Approver_Throughput_Time__c + Throughput_Time__c) , 
&quot;Rejected&quot; , (Approver_Throughput_Time__c + Throughput_Time__c) , 
NOW() - CreatedDate 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Time</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NXP User</fullName>
                </value>
                <value>
                    <fullName>Disti User</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>VAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WBI_account__c</fullName>
        <label>WBI account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Model N User Registration</label>
    <listViews>
        <fullName>All_users</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Approver1__c</columns>
        <columns>Approver2__c</columns>
        <columns>Status__c</columns>
        <columns>User_Type__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Throughput_Time__c</columns>
        <columns>Roles_Category__c</columns>
        <columns>Requester_Email_Address__c</columns>
        <columns>MAGS__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All users</label>
    </listViews>
    <listViews>
        <fullName>Change_Access</fullName>
        <columns>First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>User_Type__c</columns>
        <columns>Country__c</columns>
        <columns>Requester_Email_Address__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approver1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Access_Type__c</field>
            <operation>equals</operation>
            <value>Change Access</value>
        </filters>
        <label>Change Access</label>
    </listViews>
    <listViews>
        <fullName>New_User</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>User_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requester_Email_Address__c</columns>
        <columns>Status__c</columns>
        <columns>Country__c</columns>
        <columns>MAGS__c</columns>
        <columns>Roles_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requester_Email_Address__c</field>
            <operation>equals</operation>
            <value>megumi.tadano@nxp.com</value>
        </filters>
        <label>New User</label>
    </listViews>
    <listViews>
        <fullName>New_User_Approved</fullName>
        <columns>NAME</columns>
        <columns>User_Type__c</columns>
        <columns>Requester_Email_Address__c</columns>
        <columns>Manager_email_address__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Country__c</columns>
        <columns>MAGS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Access_Type__c</field>
            <operation>equals</operation>
            <value>New User,Change Access</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>New_User_Approved</label>
    </listViews>
    <listViews>
        <fullName>New_User_pending_byApprover1</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>User_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requester_Email_Address__c</columns>
        <columns>Approver1__c</columns>
        <columns>Status__c</columns>
        <columns>Country__c</columns>
        <columns>MAGS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Access_Type__c</field>
            <operation>contains</operation>
            <value>New User,Change Access</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Approver1__c</field>
            <operation>equals</operation>
            <value>Torsten Spinty</value>
        </filters>
        <label>New_User_pending_byApprover1</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Model N User Registeration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Model N User Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>